--- a/index.html
+++ b/index.html
@@ -3,5 +3,11 @@
   <h1>I hate my work.
     <div>
       <p>I really hate the development of CSS and Javascript.
+        <script>
+          <!-- // Hide the script from old browsers
+          document.write("Last modified on:")
+    document.write(document.lastModified);
+    // Stop hiding the script -->
+          document.write("I wrote this in JS, i think i can do other stuff also.")
     </div>
     </body>
