--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <body>
-  <h1>I hate my work.
+  <h1>I hate my work.</h1>
     <div>
-      <p>I really hate the development of CSS and Javascript.
+      <p>I really hate the development of CSS and Javascript.</p>
         <script>
-    document.write(document.lastModified);
+    document.write("Last modifed on:" + document.lastModified);
         </script>
     </div>
     </body>
